@@ -1,6 +1,7 @@
 #include <sys/types.h>
 #ifdef WIN32
 #include <winsock2.h>
+#include <windows.h>
 #else
 #include <sys/socket.h>
 #endif
