@@ -1,12 +1,13 @@
+#ifdef __MINGW32__
+#include <winsock2.h>
+#include <windows.h>
+#include "windoze.h"
+#endif
+
 #include <unistd.h>
 #include <fcntl.h>
 #include <errno.h>
 #include "io_internal.h"
-
-#ifdef __MINGW32__
-#include <winsock2.h>
-#include "windoze.h"
-#endif
 
 #ifndef O_NDELAY
 #define O_NDELAY O_NONBLOCK
