@@ -4,7 +4,7 @@ mmap_readat \- memory map a file for reading
 .SH SYNTAX
 .B #include <libowfat/mmap.h>
 
-char* \fBmmap_readat\fP(const char* \fIfilename\fR,size_t* \fIfilesize\fR,int \fIdirfd\fR);
+const char* \fBmmap_readat\fP(const char* \fIfilename\fR,size_t* \fIfilesize\fR,int \fIdirfd\fR);
 .SH DESCRIPTION
 mmap_readat opens \fIfilename\fR for reading, maps the whole file into
 memory, closes the file, writes the length of the file to \fIfilesize\fR
