@@ -18,7 +18,7 @@ int main() {
   assert(iob_addbuf(b," fnord\n",7));
   assert(iob_addfile(b,fd,10,10));
   iob_send(1,b);
-#if 0
+#if 1
   do {
     r=iob_write(1,b,write_cb);
   } while (r>0);
