@@ -1,5 +1,6 @@
 #ifdef __MINGW32__
 #include <winsock2.h>
+#include <windows.h>
 #include <errno.h>
 #include <stdio.h>
 #include "socket.h"
